# disorder

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt
src/disorder/: __main__.py  community.py  diversity.py  entropy.py  mean.py
src/diversityloss/: __main__.py  diversity.py  entropy.py  plot.py
tests/: conftest.py  test_community.py  test_diversity.py  test_entropy.py
