[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disorder"
version = "0.0.1"
authors = [{ name = "Elliot", email = "elliot.douglas.hill@gmail.com" }]
description = "Entropy and diversity in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Elliot-D-Hill/disorder"
"Bug Tracker" = "https://github.com/Elliot-D-Hill/disorder/issues"
